--- a/app_server/views/index.hbs
+++ b/app_server/views/index.hbs
@@ -10,7 +10,7 @@
     {{> header}}
     {{!-- Body of the page --}}
     <h2>Toggle Dark/Light Mode</h2>
-    <button onclick="myFunction()">Toggle dark mode</button>
+    <button class="toggle-button" onclick="myFunction()">Toggle dark mode</button>
     <h3>Views folder in app_server</h3>
     <script>
         function myFunction() {
