--- a/app_server/views/news.hbs
+++ b/app_server/views/news.hbs
@@ -9,20 +9,15 @@
     {{!-- Top menu  --}}
     {{> header}}
     {{!-- Body of the page --}}
-    <h2>Toggle Dark/Light Mode</h2>
-    {{!-- <button onclick="myFunction()" class="ThemeToggle_themeToggle__KbhS8" aria-label="Toggle Dark Mode">Toggle dark mode</button> --}}
-        <button type="button" class="ThemeToggle_themeToggle__KbhS8" aria-label="Toggle Dark Mode" onclick="myFunction()">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon" class="block dark:hidden" height="20">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"></path>
-        </svg>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon" class="hidden dark:block" height="20">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"></path>
-        </svg>
-    </button>
-    <h3>News Pager</h3>
-    <div class="container">
-      
+    {{!-- Search Launch by name  --}}
+    <div class="search-container">
+        <form action="">
+            <label for="lsearch">Search Launch:</label>
+            <input type="search" id="lsearch" name="lsearch">
+            <input type="submit" value="Submit">
+        </form>
     </div>
+    {{!-- End of the search  --}}
     <div class="container">
         {{#each launchdata}}
         <div class="box">
@@ -49,13 +44,6 @@
         </div>
         {{/each}}
     </div>
-    <script>
-        function myFunction() {
-            var element = document.body;
-            element.classList.toggle("dark-mode");
-        }  
-    </script>
-
     {{!-- Footer menu  --}}
     {{> footer}}
 </body>
